..F....... [ZBX-20397] fixed draggable object alignment
* commit 'e639d6fd8d7978f7450b501fdb770e57bc3a3e99':
  ..F....... [ZBX-20397] fixed draggable object alignment in Dashboard for map navigation tree widget
  ..F....... [ZBX-20397] fixed vertical align in tophost widget edit and web scenario edit forms
  ..F....... [ZBX-20397] fixed column spacing in Host -> Graph -> Edit -> addItems table
  ..F....... [ZBX-20397] fixed draggable object alignment

(cherry picked from commit 5a924668d221b6fcc8a771a95bcf0eff125be84d)

 Conflicts:
	sass/stylesheets/sass/layout/_form-grid.scss
	ui/assets/styles/blue-theme.css
	ui/assets/styles/dark-theme.css
	ui/assets/styles/hc-dark.css
	ui/assets/styles/hc-light.css

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -5168,6 +5168,7 @@ svg {
 				> .content {
 					display: flex;
 					height: 20px;
+					align-items: center;
 
 					> .arrow {
 						flex: 0 0 15px;
@@ -6208,7 +6209,7 @@ button {
 
 // Table column styles
 #itemsTable {
-	.table-col-handle { width: 26px; }
+	.table-col-handle { width: 10px; }
 	.table-col-no { width: 20px; }
 	.table-col-name-normal { width: 285px; }
 	.table-col-name { width: 365px; }
